added docs for all auth endpoints
